--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "websocket micro-framework",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watchAll"
   },
   "repository": {
     "type": "git",
